[tool.poetry]
name = "api"
version = "0.1.0"
description = "FastAPI service for transaction data synchronization"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"